# python-project-lvl1

./: .gitignore  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
brain_games/: __init__.py  cli.py  config.py  engine.py  even_game.py  game_engine.py
brain_games/games/: __init__.py  calc.py  calc_game.py  even.py  even_game.py  gcd.py  gcd_game.py  prime.py  prime_game.py  progression.py  progression_game.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
