[tool.poetry]
name = "vcslav-v_brain_games"
version = "0.6.10"
description = "Hexlet study project - Brain Games"
authors = ["vcslav-v <vcslav.v@gmail.com>"]
packages = [
  { include = "brain_games" },
]
repository = "https://github.com/vcslav-v/python-project-lvl1"
classifiers = [
    "Environment :: Console",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment"
]

[[tool.poetry.source]]
name = "prompt"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
